--- a/1-node-farm/starter/package.json
+++ b/1-node-farm/starter/package.json
@@ -1,6 +1,15 @@
 {
-  "name": "starter",
+  "name": "node-farm",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "scripts": {
+    "start": "nodemon index.js"
+  },
+  "license": "MIT",
+  "dependencies": {
+    "slugify": "^1.3.5"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
+  }
 }
