--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -5,14 +5,26 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start:dev": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js"
   },
   "author": "Mikhail Shvedov",
   "license": "ISC",
   "dependencies": {
     "airbnb": "^0.0.2",
-    "eslint": "^6.6.0",
+    "dotenv": "^8.2.0",
     "express": "~4.17.1",
     "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "prettier": "^1.18.2"
   }
 }
