Tour controller. CRUD operations

--- a/4-natours/starter/config.env
+++ b/4-natours/starter/config.env
@@ -2,3 +2,6 @@ NODE_ENV=development
 PORT=3000
 USER=mic
 PASSWORD=123456
+DATABASE_PASSWORD=P44YfclaUjWXrmML
+DATABASE=mongodb+srv://micangel:<PASSWORD>@cluster0-lhivz.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_LOCAL=mongodb://localhost:27017/natours-test
