--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon server.js",
+    "start": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js"
   },
   "author": "Mikhail Shvedov",
@@ -14,6 +14,7 @@
     "airbnb": "^0.0.2",
     "dotenv": "^8.2.0",
     "express": "~4.17.1",
+    "mongoose": "^5.5.2",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
@@ -26,5 +27,8 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
     "prettier": "^1.18.2"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
