--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -16,7 +16,8 @@
     "express": "~4.17.1",
     "mongoose": "^5.5.2",
     "morgan": "^1.9.1",
-    "slugify": "^1.3.6"
+    "slugify": "^1.3.6",
+    "validator": "^12.0.0"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
