--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js"
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "Mikhail Shvedov",
   "license": "ISC",
@@ -28,6 +29,7 @@
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
+    "ndb": "^1.1.5",
     "prettier": "^1.18.2"
   },
   "engines": {
