--- a/4-natours/starter/config.env
+++ b/4-natours/starter/config.env
@@ -5,3 +5,6 @@ PASSWORD=123456
 DATABASE_PASSWORD=P44YfclaUjWXrmML
 DATABASE=mongodb+srv://micangel:<PASSWORD>@cluster0-lhivz.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours-test
+
+JWT_SECRET=my-ultra-secure-and-ultra-long-secret
+JWT_EXPIRES_IN=90d
