--- a/4-natours/starter/config.env
+++ b/4-natours/starter/config.env
@@ -8,3 +8,8 @@ DATABASE_LOCAL=mongodb://localhost:27017/natours-test
 
 JWT_SECRET=my-ultra-secure-and-ultra-long-secret
 JWT_EXPIRES_IN=90d
+
+EMAIL_USERNAME=c5bf1e9dbc112b
+EMAIL_PASSWORD=8b950eb41cc7ee
+EMAIL_HOST=	smtp.mailtrap.io
+EMAIL_PORT=25
