Rate limit requests

--- a/4-natours/starter/config.env
+++ b/4-natours/starter/config.env
@@ -8,6 +8,7 @@ DATABASE_LOCAL=mongodb://localhost:27017/natours-test
 
 JWT_SECRET=my-ultra-secure-and-ultra-long-secret
 JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
 
 EMAIL_USERNAME=c5bf1e9dbc112b
 EMAIL_PASSWORD=8b950eb41cc7ee
