--- a/4-natours/after-section-12/config.env
+++ b/4-natours/after-section-12/config.env
@@ -1,14 +1,31 @@
+# NODE_ENV=development
+# PORT=3000
+# DATABASE=mongodb+srv://jonas:<PASSWORD>@cluster0-pwikv.mongodb.net/natours?retryWrites=true
+# DATABASE_LOCAL=mongodb://localhost:27017/natours
+# DATABASE_PASSWORD=On0adDgBCE5ECWh6
+
+# JWT_SECRET=my-ultra-secure-and-ultra-long-secret
+# JWT_EXPIRES_IN=90d
+# JWT_COOKIE_EXPIRES_IN=90
+
+# EMAIL_USERNAME=a124458539192a
+# EMAIL_PASSWORD=1e3caf48074eba
+# EMAIL_HOST=smtp.mailtrap.io
+# EMAIL_PORT=25
+
 NODE_ENV=development
 PORT=3000
-DATABASE=mongodb+srv://jonas:<PASSWORD>@cluster0-pwikv.mongodb.net/natours?retryWrites=true
-DATABASE_LOCAL=mongodb://localhost:27017/natours
-DATABASE_PASSWORD=On0adDgBCE5ECWh6
+USER=mic
+PASSWORD=123456
+DATABASE_PASSWORD=P44YfclaUjWXrmML
+DATABASE=mongodb+srv://micangel:<PASSWORD>@cluster0-lhivz.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_LOCAL=mongodb://localhost:27017/natours-test
 
 JWT_SECRET=my-ultra-secure-and-ultra-long-secret
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90
 
-EMAIL_USERNAME=a124458539192a
-EMAIL_PASSWORD=1e3caf48074eba
-EMAIL_HOST=smtp.mailtrap.io
+EMAIL_USERNAME=c5bf1e9dbc112b
+EMAIL_PASSWORD=8b950eb41cc7ee
+EMAIL_HOST=	smtp.mailtrap.io
 EMAIL_PORT=25
