--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "airbnb": "^0.0.2",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "express": "~4.17.1",
     "express-mongo-sanitize": "^1.3.2",
