--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -7,12 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
-    "debug": "ndb server.js"
+    "debug": "ndb server.js",
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
   "author": "Mikhail Shvedov",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.7.0",
     "airbnb": "^0.0.2",
+    "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
@@ -25,6 +28,7 @@
     "mongoose": "^5.5.2",
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.1",
+    "parcel-bundler": "^1.12.4",
     "pug": "^2.0.4",
     "slugify": "^1.3.6",
     "validator": "^12.0.0",
